# ReverseUnreal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Loader/: CMakeLists.txt  Loader.cpp
Source/: CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.h  ReverseUnreal.h  ReverseUnrealKiero.h  Unreal.cpp  Unreal.h  Utils.cpp  Utils.h  magic_enum.hpp
Source/UE4/: ChooseClass.h  Class.h  Core.h  CoreNative.h  EnumAsByte.h  Field.h  FieldPath.h  GC.h  MemoryLayout.h  Models.h  NameTypes.h  NetTypes.h  ObjectMacros.h  Platform.h  Primitives.h  String.h  TypeTraits.h  UObject.h  UnrealTypes.h  WeakObjPtr.h  World.h  info.txt
Source/UE4/Containers/: Array.h  Array.h.old  BitArray.h  ContainersAllocationPolicy.h  Map.h  Map.h.old  Pair.h  ScriptArray.h  Set.h  Set.h.Old  Sorting.h  SparseArray.h
Source/UE4/HAL/: ThreadSafeCounter.h
Source/UE4/HAL/Allocator/: AnsiAllocator.h  DefaultAllocatorPolicies.h
Source/UE4/Traits/: IsVoidType.h
Source/UE4/Windows/: Platform.h  Windows.h  WindowsCriticalSection.h
